Fix typechecking of arend-lib